// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleError Saga error level errors should call setNonCriticalError 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "error": Object {
          "code": "mockErrorCode",
          "level": "error",
        },
        "topic": "mockErrorTopic",
        "type": "app/Errors/SET_NON_CRITICAL_ERROR",
      },
      "channel": null,
    },
  },
}
`;

exports[`handleError Saga session fatal level errors should call setCriticalError 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "error": Object {
          "code": "mockErrorCode",
          "level": "session-fatal",
        },
        "topic": "mockErrorTopic",
        "type": "app/Errors/SET_CRITICAL_ERROR",
      },
      "channel": null,
    },
  },
}
`;

exports[`handleError Saga other level errors are ignored 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`setLoginErrorAndReload Saga should call CxEngage logout 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockLogoutFunction",
        undefined,
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call SDK logout function 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockLogoutFunction",
        undefined,
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call SDK subscribe function with session topic 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockSubscribeFunction",
        "cxengage/session/started",
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call localStorage.setItem with "ADError" and errorType 1`] = `
Array [
  "ADError",
  "mockErrorType",
]
`;
